--- a/test-output/report.html
+++ b/test-output/report.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Dec 5, 2019 11:33:27 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Dec 6, 2019 05:06:30 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -125,15 +125,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify that page subtitle is equals to 'All Calendar Events'</span>
-						<span class='test-time'>Dec 5, 2019 11:33:34 PM</span>
+						<span class='test-name'>Create a new car</span>
+						<span class='test-time'>Dec 6, 2019 05:06:34 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 5, 2019 11:33:34 PM</span>
-	<span class='label end-time'>Dec 5, 2019 11:33:41 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 6s+864ms</span>
+	<span class='label start-time'>Dec 6, 2019 05:06:34 PM</span>
+	<span class='label end-time'>Dec 6, 2019 05:06:43 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 8s+568ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,9 +147,9 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>11:33:41 PM</td>
+				<td class='timestamp'>5:06:43 PM</td>
 				<td class='step-details'>
-						Verified that page subtitle 'All Calendar Events' is displayed
+						New car was created
 					
 				</td>
 			</tr>
@@ -198,19 +198,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 5, 2019 11:33:27 PM</div>
+					<div class='panel-lead'>Dec 6, 2019 05:06:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 5, 2019 11:33:42 PM</div>
+			 		<div class='panel-lead'>Dec 6, 2019 05:06:43 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 14s+961ms</div>
+					<div class='panel-lead'>0h 0m 13s+460ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -277,7 +277,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Verify that page subtitle is equals to 'All Calendar Events'":6.864
+			        "Create a new car":8.568
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
